# QuranCaption

./: .gitignore  .prettierignore  .prettierrc  .typesafe-i18n.json  AGENTS.md  BRANDING.md  DEVELOPMENT.md  README.md  RELEASE_GUIDE.html  eslint.config.js  package-lock.json  package.json  skills-lock.json  svelte.config.js  vite.config.ts  vitest-setup-client.ts
src-tauri/: .taurignore  Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/android-binaries/: README.md
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json  updater.json
src-tauri/icons/: icon.icns
src-tauri/python/: local_muaalem_segmenter.py  local_multi_aligner_segmenter.py  local_segmenter.py  local_surah_splitter_segmenter.py  muaalem_requirements.txt  requirements.txt  surah_splitter_requirements.txt
src-tauri/python/alignment_quran_recitation/: ctc_aligner.py
src-tauri/python/muaalem_modeling/: multi_level_tokenizer.py
src-tauri/python/quran-multi-aligner/: .gitignore  README.md  align_config.py  app.py  config.py  requirements.txt
src-tauri/python/quran-multi-aligner/data/: digital_khatt_v2_script.json  phoneme_sub_costs.json  surah_info.json
src-tauri/python/quran-multi-aligner/docs/: CHANGELOG.md  client_api.md  usage-logging.md
src-tauri/python/quran-multi-aligner/src/: mfa.py  pipeline.py
src-tauri/python/quran-multi-aligner/src/api/: bench_api.py  (+1 more)
src-tauri/python/quran_recite_to_text/: requirements.txt  run.py
src-tauri/python/quran_recite_to_text/QuranKarim/: audio_features.py  decoder.py  normalizer.py  quran_db.py
src-tauri/python/quran_transcript_data/quran-script/: quran-alphabet.json  quran-simple-imlaey-without-puase-sajda-hizb-marks-and-tatweel.xml  quran-uthmani-without-pause-sajda-hizb-marks.xml  ref_norm_ph.txt
src-tauri/python/segment_core/: config.py  lafzize_integration.py  quran_index.py  segment_processor.py  special_segments.py  text_matcher.py  text_preprocessor.py
src-tauri/python/surah-splitter/: .gitignore  README.md
src-tauri/python/surah-splitter/one_off_scripts/: create_quran_word_index.py  simple_ayahs_extractor.py
src-tauri/python/surah_splitter/data/: quran.json  vocab.json
src-tauri/python/surah_splitter/src/: aligner.py  decoder.py  quran_db.py  run.py
src-tauri/src/: binaries.rs  binary_resolver.rs  exporter.rs  lib.rs  main.rs  path_utils.rs
src-tauri/src/app/: invoke.rs  mod.rs
src-tauri/src/binaries/: diagnostics.rs  mod.rs  path_env.rs  resolver.rs
src-tauri/src/commands/: ai_translation.rs  android_media.rs  auth.rs  diagnostics.rs  discord.rs  downloads.rs  files.rs  media.rs  media_dependencies.rs  mod.rs  screenshot.rs  segmentation.rs  stock_media.rs  waveform.rs
src-tauri/src/commands/ai_translation/: bold.rs  mod.rs  prompts.rs  sse.rs  trim.rs  types.rs  wbw_translation.rs
src-tauri/src/exporter/: batching.rs  codec.rs  commands.rs  concat.rs  constants.rs  ffmpeg_runner.rs  ffmpeg_utils.rs  filter_graph.rs  memory.rs  mod.rs  preprocess.rs  types.rs
src-tauri/src/segmentation/: audio_merge.rs  cloud.rs  data_files.rs  hifz.rs  install.rs  local.rs  mod.rs  python_env.rs  requirements.rs  status.rs  types.rs
src-tauri/src/utils/: mod.rs  path.rs  process.rs  temp_file.rs
(+929 files in other folders)
